--- a/views/show.html
+++ b/views/show.html
@@ -60,7 +60,7 @@
             chartType : "{{ $visualizr->type }}"
         }
       </script>
-     <script type="text/javascript" src="https://www.google.com/jsapi"></script>
+    <script type="text/javascript" src="https://www.google.com/jsapi"></script>
     <script type="text/javascript">
       google.load("visualization", "1", {packages:["corechart"]});
       google.setOnLoadCallback(drawChart);
@@ -71,11 +71,16 @@
           async: false
         }).responseText;
 
+        var getChartOption = $.ajax({
+          url: "{{ url('visualizr/option/') }}/"+Visualizr.chartId,
+          dataType:"json",
+          async: false
+        }).responseText;
+
         var vslData = $.parseJSON(getAllData);
+        var vslOption = $.parseJSON(getChartOption);
 
         var data = google.visualization.arrayToDataTable(vslData);
-
-        
 
         var chartType = Visualizr.chartType;
 
@@ -92,6 +97,6 @@
         };
 
         // chart.draw(data, options);
-        chart.draw(data);
+        chart.draw(data,vslOption);
       }
     </script>
