--- a/views/index.html
+++ b/views/index.html
@@ -22,7 +22,7 @@
 	<h4>There is no data</h4>
 {{ endif }}
 <div id="piechart" style="width: 800px; height: 500px; margin: 0 auto"></div>
-<h3>Browse by Categories</h3>
+<!-- <h3>Browse by Categories</h3>
 	<ul class="home-cat-list">
 	{{ if(count($categories) > 0) }}
 		{{ loop($categories as $category) }}
@@ -33,7 +33,7 @@
 	{{ endif }}
 	</ul>
 	<div class="clearfix"></div>
-</div>
+</div> -->
 <script type="text/javascript" src="https://www.google.com/jsapi"></script>
 <script type="text/javascript">
 	$('.visualizr-link').click(function () {
