--- a/views/show.html
+++ b/views/show.html
@@ -1,44 +1,3 @@
-    <!-- <script type="text/javascript">
-
-      google.load('visualization', '1.0', {'packages':['corechart']});
-      google.setOnLoadCallback(drawChart);
-      // window.history.pushState("object or string", "Title", "/new-url");
-      
-      function drawChart() {
-
-        var getAllData = $.ajax({
-          url: "{{ url() }}visualizr/show/{{ Uri::segment(3) }}",
-          dataType:"json",
-          async: false
-        }).responseText;
-        
-        var vslData = $.parseJSON(getAllData);
-
-        // Set the title of Document
-        document.title = vslData.title;
-
-        var data = new google.visualization.DataTable();
-
-        data.addColumn('string', 'Topping');
-        data.addColumn('number', 'Slices');
-        $.each(vslData.data_set, function (index, value) {
-            data.addRow([value[0], parseInt(value[1])]);
-        })
-
-        
-        var options = {
-          'title': vslData.title,
-          'width':700,
-          'height':700
-        };
-
-        if (vslData.type === 'pie') {
-          var chart = new google.visualization.PieChart(document.getElementById('chart_div'));
-        };
-        chart.draw(data, options);
-      }
-    </script> -->
-<!--Div that will hold the pie chart-->
 <div class="btn-group">
    <a class="btn purple" href="#" data-toggle="dropdown">
    <i class="icon-user"></i> Settings
@@ -54,7 +13,7 @@
 </div>
   <h2>{{ $visualizr->title }}</h2>
     <div id="piechart" style="width: 800px; height: 500px; margin: 0 auto"></div>
-      <script>
+      <script type="text/javascript">
         var Visualizr = {
             chartId: "{{ $visualizr->id }}",
             chartType : "{{ $visualizr->type }}"
