--- a/views/index.html
+++ b/views/index.html
@@ -81,7 +81,7 @@
 						  	}).responseText; 
 
 						  	var options = $.parseJSON(getOption); 
-						  	// var options = {};
+						  	/* var options = {}; */
 						  	options.fontName = 'Myanmar3';
 						  	options.chartArea = {
 						  		width : '100%'
