--- a/views/index.html
+++ b/views/index.html
@@ -73,15 +73,15 @@
 						       var chart = new google.visualization.ColumnChart(document.getElementById('piechart'));
 						    };
 
-
-						     var getOption = $.ajax({
+						    /*
+						    var getOption = $.ajax({
 						      url: "{{ url('visualizr/option/') }}/" + currentId,
 						      dataType:"json",
 						      async: false,
 						  	}).responseText; 
 
-						  	var options = $.parseJSON(getOption); 
-						  	/* var options = {}; */
+						  	var options = $.parseJSON(getOption); */
+						  	var options = {}; 
 						  	options.fontName = 'Myanmar3';
 						  	options.chartArea = {
 						  		width : '100%'
