Exporting features fixed

--- a/views/index.html
+++ b/views/index.html
@@ -1,5 +1,4 @@
 <div class="vsl">
-<!-- <base href="www.google.com" /> -->
 <h2 class="page-title"></h2>
 <div class="chart-selector">
 </div>
@@ -36,9 +35,9 @@
       	<div id="dl-btn" style="margin-bottom: 10px;"></div>
         <canvas id="exported_img" style="display:none;border: 2px solid #ccc"></canvas>
       </div>
-    </div><!-- /.modal-content -->
-  </div><!-- /.modal-dialog -->
-</div><!-- /.modal -->
+    </div>
+  </div>
+</div>
 <!-- <h3>Browse by Categories</h3>
 	<ul class="home-cat-list">
 	{{ if(count($categories) > 0) }}
